--- a/src/app/profile/user-profile/user-profile.component.html
+++ b/src/app/profile/user-profile/user-profile.component.html
@@ -298,7 +298,7 @@
         *ngIf="isAdmin"
         nz-popconfirm
         nzPopconfirmTitle="Are you sure you want to delete this user's account?"
-        (nzOnConfirm)="rejectAccount(userProfile?.username)">
+        (nzOnConfirm)="deleteAccount(userProfile?.username)">
       Delete Account
     </li>
   </ul>
