- Change reset password using email to reset password using username - Send password reset OTP to phone number instead of email

--- a/src/app/user/reset-password/reset-password.component.html
+++ b/src/app/user/reset-password/reset-password.component.html
@@ -8,14 +8,13 @@
 
 <form nz-form [formGroup]="resetForm">
   <nz-form-item *ngIf="currentStep === 0">
-    <nz-form-label [nzSm]="6" [nzXs]="24" class="fw-bold">Email</nz-form-label>
-    <nz-form-control [nzErrorTip]="emailErrorTpl">
+    <nz-form-label [nzSm]="6" [nzXs]="24" class="fw-bold">Username</nz-form-label>
+    <nz-form-control [nzErrorTip]="usernameErrorTpl">
       <nz-input-group>
-        <input type="email" nz-input formControlName="email"/>
+        <input type="text" nz-input formControlName="username"/>
       </nz-input-group>
-      <ng-template #emailErrorTpl let-control>
-        <ng-container *ngIf="control.hasError('required')">Please input your email!</ng-container>
-        <ng-container *ngIf="control.hasError('email')">Please input valid email!</ng-container>
+      <ng-template #usernameErrorTpl let-control>
+        <ng-container *ngIf="control.hasError('required')">Please input your username.</ng-container>
       </ng-template>
     </nz-form-control>
   </nz-form-item>
@@ -68,7 +67,7 @@
 
 </form>
 
-<button nz-button [disabled]="!emailFormControl.valid" (click)="requestPasswordReset()" *ngIf="currentStep === 0">Next
+<button nz-button [disabled]="!usernameFormControl.valid" (click)="requestPasswordReset()" *ngIf="currentStep === 0">Next
 </button>
 <button nz-button [disabled]="!otpFormControl.valid" (click)="validateOtp()" *ngIf="currentStep === 1">Next</button>
 <button nz-button [disabled]="!(passwordFormControl.valid && confirmPasswordFormControl.valid)" nzType="primary"
