--- a/src/app/assistance/assistance-table/assistance-table.component.html
+++ b/src/app/assistance/assistance-table/assistance-table.component.html
@@ -30,6 +30,7 @@
         <nz-tag *ngSwitchCase="'pending'" nzColor="gold">Pending</nz-tag>
         <nz-tag *ngSwitchCase="'processing'" nzColor="blue">Processing</nz-tag>
         <nz-tag *ngSwitchCase="'completed'" nzColor="green">Completed</nz-tag>
+        <nz-tag *ngSwitchCase="'accepted'" nzColor="green">Accepted</nz-tag>
         <nz-tag *ngSwitchCase="'cancelled'" nzColor="magenta">Cancelled</nz-tag>
         <nz-tag *ngSwitchCase="'rejected'" nzColor="magenta">Rejected</nz-tag>
         <span *ngSwitchDefault>-</span>
