--- a/src/app/appointment/my-appointment/my-appointment.component.html
+++ b/src/app/appointment/my-appointment/my-appointment.component.html
@@ -1,6 +1,6 @@
 <nz-space class="text-end">
   <button nz-button nzType="primary" *nzSpaceItem (click)="openFilterDrawer()">Filter</button>
-  <button nz-button nzType="primary" *nzSpaceItem (click)="openAppointmentModal()">Schedule Appointment</button>
+<!--  <button nz-button nzType="primary" *nzSpaceItem (click)="openAppointmentModal()">Schedule Appointment</button>-->
 </nz-space>
 
 <br><br>
