- Display actionMaker's full name at ActivityLogComponent - Hide action button at AppointmentTableComponent if the appointment's status is cancelled / completed - Add audit logs for appointment and assistance module - Allow admin to block/unblock user to request assistance

--- a/src/app/appointment/appointment-table/appointment-table.component.html
+++ b/src/app/appointment/appointment-table/appointment-table.component.html
@@ -44,7 +44,7 @@
     <td>{{ data?.adminFullName || "-" }}</td>
     <td>
       <button nz-button nz-dropdown [nzDropdownMenu]="actionMenu"
-              *ngIf="data?.status !== 'cancelled'; else dashTpl">
+              *ngIf="data?.status !== 'cancelled' && data?.status !== 'completed'; else dashTpl">
         Actions <i nz-icon nzType="down"></i>
       </button>
       <nz-dropdown-menu #actionMenu="nzDropdownMenu">
