--- a/src/app/settings/activity-log/activity-log.component.html
+++ b/src/app/settings/activity-log/activity-log.component.html
@@ -28,7 +28,7 @@
   <tr *ngFor="let data of categoryTable.data">
     <td>{{ data?.auditId || "-" }}</td>
     <td>{{ data?.module || "-"}}</td>
-    <td>{{ data?.actionBy || "-" }}</td>
+    <td>{{ data?.actionByFullName || "-" }}</td>
     <td>{{ (data?.actionDate | date: NZ_DATE_FORMAT) || "-"}}</td>
     <td>{{ data?.actionName || "-" }}</td>
     <td>
@@ -48,14 +48,14 @@
     <nz-descriptions nzBordered
                      nzLayout="vertical"
                      [nzColumn]="{ xxl: 2, xl: 2, lg: 2, md: 2, sm: 2, xs: 2 }">
-      <nz-descriptions-item nzTitle="Audit ID">{{selectedObj.auditId || "-"}}</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="Module">{{selectedObj.module || "-"}}</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="Action Maker">{{selectedObj.actionBy || "-"}}</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="Action Date">{{(selectedObj.actionDate | date: NZ_DATE_FORMAT) || "-"}}</nz-descriptions-item>
-      <nz-descriptions-item nzTitle="Action Name" nzSpan="2">{{selectedObj.actionName || "-"}}</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="Audit ID">{{selectedObj?.auditId || "-"}}</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="Module">{{selectedObj?.module || "-"}}</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="Action Maker">{{selectedObj?.actionByFullName || "-"}}</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="Action Date">{{(selectedObj?.actionDate | date: NZ_DATE_FORMAT) || "-"}}</nz-descriptions-item>
+      <nz-descriptions-item nzTitle="Action Name" nzSpan="2">{{selectedObj?.actionName || "-"}}</nz-descriptions-item>
       <nz-descriptions-item nzTitle="Action Description" nzSpan="2">
-        <ul *ngIf="selectedObj.actionDescriptions; else dashTpl">
-          <li *ngFor="let desc of selectedObj.actionDescriptions" [innerHTML]="desc"></li>
+        <ul *ngIf="selectedObj?.actionDescriptions; else dashTpl">
+          <li *ngFor="let desc of selectedObj?.actionDescriptions" [innerHTML]="desc"></li>
         </ul>
       </nz-descriptions-item>
     </nz-descriptions>
